斜め線の位置調整と競合の完全排除
- homepage-modern.cssの.hero::afterをbottom: -50pxに変更（斜め線を下に移動）
- homepage-loading-integration.jsのヒーローアニメーションを無効化
- translateYアニメーションによる競合を排除
- すべての要素を即座に表示するように修正

--- a/css/homepage-modern.css
+++ b/css/homepage-modern.css
@@ -264,7 +264,7 @@
 .hero::after {
     content: '';
     position: absolute;
-    bottom: -1px;
+    bottom: -50px; /* もっと下に移動 */
     left: 0;
     width: 100%;
     height: 100px;
