--- a/css/homepage-modern.css
+++ b/css/homepage-modern.css
@@ -260,17 +260,10 @@
     }
 }
 
-/* 斜めのセクション区切り */
+/* 斜めのセクション区切り - 削除 */
 .hero::after {
-    content: '';
-    position: absolute;
-    bottom: -50px; /* もっと下に移動 */
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background: white;
-    transform: skewY(-3deg);
-    transform-origin: left;
+    display: none !important;
+    content: none !important;
 }
 
 /* Aboutセクション改善 */
