--- a/css/matching-unified.css
+++ b/css/matching-unified.css
@@ -517,9 +517,12 @@
 }
 
 .matching-radar canvas {
-    width: 100% !important;
-    height: 180px !important;
+    width: 100%;
+    height: 100%;
     display: block;
+    max-width: 200px;
+    max-height: 200px;
+    margin: 0 auto;
 }
 
 .radar-chart-container {
