--- a/css/advanced-search.css
+++ b/css/advanced-search.css
@@ -182,18 +182,18 @@
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
-.user-avatar {
-    width: 80px;
-    height: 80px;
-    margin: 0 auto;
-}
-
-.user-avatar img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    object-fit: cover;
-}
+/* DISABLED: .user-avatar { */
+/* DISABLED:     width: 80px; */
+/* DISABLED:     height: 80px; */
+/* DISABLED:     margin: 0 auto; */
+/* DISABLED: } */
+ */
+.user-avatar img { */
+    width: 100%; */
+    height: 100%; */
+    border-radius: 50%; */
+    object-fit: cover; */
+} */
 
 .avatar-placeholder {
     width: 100%;
