--- a/css/advanced-search.css
+++ b/css/advanced-search.css
@@ -187,13 +187,13 @@
 /* DISABLED:     height: 80px; */
 /* DISABLED:     margin: 0 auto; */
 /* DISABLED: } */
- */
-.user-avatar img { */
-    width: 100%; */
-    height: 100%; */
-    border-radius: 50%; */
-    object-fit: cover; */
-} */
+
+.user-avatar img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
+}
 
 .avatar-placeholder {
     width: 100%;
