--- a/css/members-profile-modal.css
+++ b/css/members-profile-modal.css
@@ -11,11 +11,11 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 9999;
+    z-index: 100000 !important; /* 最高優先度 */
 }
 
 #memberProfileModal.show {
-    display: flex;
+    display: flex !important;
     align-items: center;
     justify-content: center;
 }
@@ -42,6 +42,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    z-index: 100001; /* オーバーレイより上 */
 }
 
 #memberProfileModal .modal-body {
