メンバープロフィールモーダル初期表示問題修正: CSS \!important追加、active削除、style.display='none'設定

--- a/css/members-profile-modal.css
+++ b/css/members-profile-modal.css
@@ -5,7 +5,7 @@
 
 /* モーダルオーバーレイとコンテナ */
 #memberProfileModal {
-    display: none;
+    display: none !important; /* 初期状態は確実に非表示 */
     position: fixed;
     top: 0;
     left: 0;
