--- a/css/members-profile-modal.css
+++ b/css/members-profile-modal.css
@@ -6,7 +6,7 @@
 /* モーダルオーバーレイとコンテナ */
 #memberProfileModal {
     display: none !important; /* 初期状態は確実に非表示 */
-    position: fixed;
+    position: fixed !important; /* positionも強制 */
     top: 0;
     left: 0;
     right: 0;
