--- a/css/auth-register-fix.css
+++ b/css/auth-register-fix.css
@@ -45,7 +45,9 @@
 
 /* 進捗インジケーターのマージン調整 */
 .registration-progress {
-    margin: 30px 0 !important;
+    margin: 30px auto !important;
+    max-width: 100% !important;
+    padding: 0 15px !important;
 }
 
 /* チャレンジセクションのレイアウト改善 */
